dhall/tests/type-inference/failure/unit/AssertAlphaTrap2.txt
Type error: error: AssertMismatch
 --> <current file>:1:15
  |
1 | \(_: Bool) -> assert : (\(_: Bool) -> _) === (\(x: Bool) -> _)
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ AssertMismatch
  |
